# dip

./: .gitignore  CONTRIBUTING.md
hub/backend/: CODE_STANDARDS.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
hub/backend/dip-hub-chart/: Chart.yaml  values.yaml
hub/backend/dip-hub-chart/templates/: configmap.yaml  deployment.yaml
hub/backend/scripts/: init_db.py
hub/backend/src/: __init__.py  main.py
hub/backend/src/adapters/: __init__.py  application_adapter.py  deploy_manager_adapter.py  external_service_adapter.py  health_adapter.py  mock_application_adapter.py  mock_external_service_adapter.py  oauth2_adapter.py
hub/backend/src/application/: __init__.py  application_service.py  dto.py  health_service.py  login_service.py  mappers.py  ports.py  refresh_token_service.py  services.py
hub/backend/src/domain/: __init__.py  entities.py  events.py  exceptions.py
hub/backend/src/domains/: __init__.py  application.py  health.py
hub/backend/src/infrastructure/: __init__.py  config.py  container.py
hub/backend/src/infrastructure/api/: __init__.py  dependencies.py  routes.py
hub/backend/src/infrastructure/config/: settings.py
hub/backend/src/infrastructure/logging/: logger.py
hub/backend/src/infrastructure/middleware/: auth_middleware.py
hub/backend/src/infrastructure/persistence/: __init__.py  models.py  repositories.py
hub/backend/src/ports/: __init__.py  application_port.py  external_service_port.py  health_port.py
hub/backend/src/routers/: __init__.py  application_router.py  health_router.py  login_router.py  logout_router.py  refresh_token_router.py  userinfo_router.py
hub/backend/src/routers/schemas/: __init__.py  application.py  health.py
hub/backend/src/shared/: __init__.py  constants.py  utils.py
hub/backend/tests/: __init__.py  conftest.py  test_application.py  test_health.py
hub/backend/tests/integration/: test_api.py
hub/backend/tests/unit/: test_app_service.py  test_entities.py  test_package_parser.py  test_repositories.py
hub/frontend/: .biomeignore  .gitignore  .prettierignore  Dockerfile  biome.json  package.json  rsbuild.config.ts
hub/frontend/charts/dip-frontend/: values.yaml
hub/frontend/ci/: nginx.conf
hub/frontend/src/: App.css  App.tsx  index.tsx
hub/frontend/src/apis/: index.ts  types.ts
hub/frontend/src/hooks/: useApplicationsService.ts  useLanguage.ts
hub/frontend/src/routes/: ProtectedRoute.tsx  index.tsx  routes.tsx  types.ts  utils.tsx
hub/frontend/src/stores/: authStore.ts  index.ts  microAppStore.ts  oemConfigStore.ts  preferenceStore.ts  (+1 more)
hub/openapi/dependency/: dependency.openapi.yaml
hub/openapi/internal/: internal.openapi.yaml
hub/openapi/public/: index.html  public.openapi.yaml
(+81 files in other folders)
